Prepare for JDK11